<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:background="@color/stand_bg_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.mayisports.qca.view.NoSlidingPagerViewPager
        android:id="@+id/vp_main_ac"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <View
        android:background="@color/stand_split_line_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.mayisports.qca.view.MyRadioGroup
        android:background="@color/white"
        android:id="@+id/rg_main_ac"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:background="@color/white"
            android:id="@+id/rb_live_main_ac"
            android:textSize="@dimen/rb_text_size"
            android:drawablePadding="2dp"
            android:textColor="@drawable/mine_textcolor_selecter"
            android:button="@null"
            android:drawableTop="@drawable/live_bottom"
            android:gravity="center"
            android:text="@string/live_main_ac"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <RadioButton
            android:background="@color/white"
            android:id="@+id/rb_square_main_ac"
            android:textSize="@dimen/rb_text_size"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/home_bottom"
            android:textColor="@drawable/mine_textcolor_selecter"
            android:button="@null"
            android:gravity="center"
            android:text="@string/square_main_ac"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <RadioButton
            android:layout_gravity="top"
            android:clickable="false"
            android:background="@color/white"
            android:id="@+id/rb_mid_icon"
            android:button="@null"
            android:layout_width="50dp"
            android:layout_height="0.5dp" />





        <RadioButton
            android:background="@color/white"
            android:id="@+id/rb_score_main_ac"
            android:textSize="@dimen/rb_text_size"
            android:textColor="@drawable/mine_textcolor_selecter"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/score_bottom"
            android:button="@null"
            android:gravity="center"
            android:text="@string/score_main_ac"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <RadioButton
            android:background="@color/white"
            android:id="@+id/rb_mine_main_ac"
            android:textSize="@dimen/rb_text_size"
            android:drawablePadding="2dp"
            android:textColor="@drawable/mine_textcolor_selecter"
            android:button="@null"
            android:drawableTop="@drawable/mine_bottom"
            android:gravity="center"
            android:text="@string/mine_main_ac"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </com.mayisports.qca.view.MyRadioGroup>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View

                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp" />

            <View
                android:layout_alignTop="@id/rg_main_ac"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp" />
            <View
                android:id="@+id/v_mid_icon"
                android:layout_width="50dp"
                android:layout_height="1dp" />
            <View

                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp" />
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <View
                    android:layout_centerHorizontal="true"
                    android:id="@+id/v"
                    android:layout_width="1dp"
                    android:layout_height="1dp"/>
                <TextView
                    android:visibility="gone"
                    android:layout_toRightOf="@id/v"
                    android:id="@+id/tv_dynamic_home"
                    android:textSize="7sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="99+"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="right"
                    android:background="@drawable/cricle_shape_red"
                    android:layout_width="14dp"
                    android:layout_height="14dp" />
            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>


    <ImageView
        android:id="@+id/iv_mid_icon"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
</RelativeLayout>